@@ -7,6 +7,9 @@ changes relative to sbcl-2.5.0:
   * bug fix: structure BOA constructors with &REST arguments no longer cause
     structure slots named NIL or T to be unconditionally initialized with the
     values NIL and T respectively.
+  * bug fix: structure BOA constructors without values for some slots no
+    longer cause compilation errors for initforms that are not a single
+    variable.
 
 changes in sbcl-2.5.0 relative to sbcl-2.4.11:
   * platform support:
